--- a/Exercise02/qda-lda.ipynb
+++ b/Exercise02/qda-lda.ipynb
@@ -845,64 +845,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "def fit_lda(training_features, training_labels):\n",
-    "    \"\"\"\n",
-    "    Fits D dimensional Gaussian to the given training data.\n",
-    "    \n",
-    "    TRAINING LABELS: 0, 1\n",
-    "    \n",
-    "    Input N x D vector of training features, N x 1 vector of corresp. instances\n",
-    "    Returns 2 x D matrix of means of the 2 classes, 2 x D x D array of the covariances, 2 x 1 vector of the priors p\"\"\"\n",
-    "    \n",
-    "    def vec_generator(matrix):\n",
-    "        \"\"\" Returns one vector at a time\"\"\"\n",
-    "        for i in range(len(matrix[:,0])):\n",
-    "            yield matrix[i,:]\n",
-    "    features_class_0 = training_features[np.where(training_labels == 0)]\n",
-    "    features_class_1 = training_features[np.where(training_labels == 1)]\n",
-    "    mu = np.array([np.mean(features_class_0,axis=0),np.mean(features_class_1,axis=0)])\n",
-    "    \n",
-    "    #covmat = np.array([np.mean(np.outer((features_class_0-mu[0,:]),(features_class_0-mu[0,:])).T,axis=0)])\n",
-    "    covmat = np.array([np.mean([np.outer(i,j) for i,j in zip(vec_generator(features_class_0-mu[0,:]), vec_generator(features_class_0-mu[0,:]))],axis=0) \\\n",
-    "                               ,np.mean([np.outer(i,j) for i,j in zip(vec_generator(features_class_0-mu[0,:]), vec_generator(features_class_0-mu[0,:]))],axis=0)] )\n",
-    "    \"\"\"print((features_class_0-mu[0,:]).shape)\n",
-    "    print(np.outer(vec_generator(features_class_0-mu[0,:]),vec_generator(features_class_0-mu[0,:])).shape)\n",
-    "    print(vec_generator(mu))\"\"\"\n",
-    "    #print(covmat)\n",
-    "    p = np.array([len(features_class_0)/len(training_features), 1 - len(features_class_0)/len(training_features)])\n",
-    "    return mu, covmat, p\n",
-    "\n",
-    "\n",
-    "def predict_lda(mu, covmat, p, test_features):\n",
-    "    \"\"\"\n",
-    "    Predicts test instances of the given test_features given the parameter of the multivariat, D dimensional Gaussian that describes\n",
-    "    the feature distribution\n",
-    "    \n",
-    "    Input 2 x D matrix of means of the 2 classes, 2 x D x D array of the covariances, 2 x 1 vector of the priors p, M x D vector of test features\n",
-    "    \n",
-    "    Returns M x 1 vector of class labels (0 and 1) \"\"\"\n",
-    "    \n",
-    "    b = np.array(np.log(np.linalg.det(covmat)/p**2)) # precompute constant factor of log-likelihood; for both classes simultaneously (axis 0)\n",
-    "    \n",
-    "    \n",
-    "    inv_covmat = np.linalg.inv(covmat) # inverse of covmat; for both classes simultaneously (axis 0)\n",
-    "    \n",
-    "    likelihood_class_0 = [np.inner(np.array(i-mu[0,:]),inv_covmat[0,:,:].dot(np.array(i-mu[0,:])))+b[0] for i in test_features]\n",
-    "    likelihood_class_1 = [np.inner(np.array(i-mu[1,:]),inv_covmat[1,:,:].dot(np.array(i-mu[1,:])))+b[1] for i in test_features]\n",
-    "    \"\"\"print(np.array([np.inner( (i-mu[0,:]) , (inv_covmat[0,:,:].dot(i-mu[0,:] ) ) ) for i in test_features[0,:]]))\n",
-    "    print(np.inner([1,2],inv_covmat[0,:,:].dot([1,2])))\n",
-    "    print([i for i in test_features[0,:]])\"\"\"\n",
-    "    \n",
-    "    test_instances = np.argmin(np.array([likelihood_class_0,likelihood_class_1]),axis=0) # returns indices 0 or 1 which are in this \\\n",
-    "                                                                                        # case equivalent with the classes\n",
-    "    return test_instances"
-   ]
+   "source": []
   }
  ],
  "metadata": {
