--- a/Exercise02/qda-lda.ipynb
+++ b/Exercise02/qda-lda.ipynb
@@ -225,7 +225,8 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -845,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -859,7 +860,10 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "a=np.array([2,3,4])\n",
+    "b="
+   ]
   }
  ],
  "metadata": {
